[gd_scene load_steps=58 format=3 uid="uid://do2hs7lxj8uhv"]

[ext_resource type="Script" uid="uid://ciygxrus3jihg" path="res://Scripts/Player.gd" id="1_i82fi"]
[ext_resource type="Texture2D" uid="uid://dnxrnx8txehj4" path="res://Assets/industrial.v2.png" id="2_1btfr"]
[ext_resource type="Script" uid="uid://fuf2mx0fuq7n" path="res://Scripts/Life.gd" id="3_fkybt"]
[ext_resource type="Texture2D" uid="uid://dhdupam68td8y" path="res://Assets/heart.png" id="4_x3wgy"]
[ext_resource type="Texture2D" uid="uid://d1l3huese2vad" path="res://Assets/dead_heart.png" id="5_3smsa"]
[ext_resource type="Texture2D" uid="uid://dyxugyolakvlo" path="res://Assets/Free Smoke Fx  Pixel 07.png" id="6_x3wgy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_740te"]
radius = 7.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_37m3m"]
atlas = ExtResource("2_1btfr")
region = Rect2(0, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa346"]
atlas = ExtResource("2_1btfr")
region = Rect2(16, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e37ro"]
atlas = ExtResource("2_1btfr")
region = Rect2(32, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gopau"]
atlas = ExtResource("2_1btfr")
region = Rect2(48, 288, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1viqj"]
atlas = ExtResource("2_1btfr")
region = Rect2(16, 464, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0fjq"]
atlas = ExtResource("2_1btfr")
region = Rect2(0, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcnth"]
atlas = ExtResource("2_1btfr")
region = Rect2(16, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4yv1"]
atlas = ExtResource("2_1btfr")
region = Rect2(0, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffcg6"]
atlas = ExtResource("2_1btfr")
region = Rect2(16, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_40wd1"]
atlas = ExtResource("2_1btfr")
region = Rect2(32, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut71k"]
atlas = ExtResource("2_1btfr")
region = Rect2(48, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypin8"]
atlas = ExtResource("2_1btfr")
region = Rect2(64, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgg45"]
atlas = ExtResource("2_1btfr")
region = Rect2(80, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2ilx"]
atlas = ExtResource("2_1btfr")
region = Rect2(96, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jehsk"]
atlas = ExtResource("2_1btfr")
region = Rect2(112, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hkny"]
atlas = ExtResource("2_1btfr")
region = Rect2(0, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4fq"]
atlas = ExtResource("2_1btfr")
region = Rect2(16, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t83ic"]
atlas = ExtResource("2_1btfr")
region = Rect2(32, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r21by"]
atlas = ExtResource("2_1btfr")
region = Rect2(48, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsbsf"]
atlas = ExtResource("2_1btfr")
region = Rect2(64, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qeld"]
atlas = ExtResource("2_1btfr")
region = Rect2(80, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u20sj"]
atlas = ExtResource("2_1btfr")
region = Rect2(96, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijlk"]
atlas = ExtResource("2_1btfr")
region = Rect2(112, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fgtg"]
atlas = ExtResource("2_1btfr")
region = Rect2(0, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f6us"]
atlas = ExtResource("2_1btfr")
region = Rect2(16, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2jx8"]
atlas = ExtResource("2_1btfr")
region = Rect2(32, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wbfu"]
atlas = ExtResource("2_1btfr")
region = Rect2(48, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uitw"]
atlas = ExtResource("2_1btfr")
region = Rect2(64, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyifm"]
atlas = ExtResource("2_1btfr")
region = Rect2(80, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx7t5"]
atlas = ExtResource("2_1btfr")
region = Rect2(96, 480, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0udag"]
atlas = ExtResource("2_1btfr")
region = Rect2(112, 480, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kht8a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37m3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa346")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e37ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gopau")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1viqj")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0fjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcnth")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4yv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffcg6")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4yv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffcg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40wd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut71k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypin8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgg45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2ilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jehsk")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffcg6")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hkny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs4fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t83ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r21by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsbsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qeld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u20sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijlk")
}],
"loop": false,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fgtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f6us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2jx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wbfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uitw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyifm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx7t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0udag")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("6_x3wgy")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("6_x3wgy")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("6_x3wgy")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("6_x3wgy")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("6_x3wgy")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("6_x3wgy")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("6_x3wgy")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("6_x3wgy")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("6_x3wgy")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("6_x3wgy")
region = Rect2(576, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("6_x3wgy")
region = Rect2(640, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("6_x3wgy")
region = Rect2(704, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("6_x3wgy")
region = Rect2(768, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("6_x3wgy")
region = Rect2(832, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("6_x3wgy")
region = Rect2(896, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("6_x3wgy")
region = Rect2(960, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fkybt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}],
"loop": false,
"name": &"first",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8erm5"]
radius = 33.54102

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
script = ExtResource("1_i82fi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
shape = SubResource("CapsuleShape2D_740te")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.988982, 1)
sprite_frames = SubResource("SpriteFrames_kht8a")
animation = &"Idle"
autoplay = "Idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="UI" type="CanvasLayer" parent="."]
process_priority = 1

[node name="Life" type="Control" parent="UI"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.154321
offset_left = -32.0
offset_top = -8.0
offset_right = -32.0
offset_bottom = -8.0
grow_horizontal = 2
script = ExtResource("3_fkybt")
full_heart_texture = ExtResource("4_x3wgy")
empty_heart_texture = ExtResource("5_3smsa")
metadata/_edit_use_anchors_ = true

[node name="Hearts" type="HBoxContainer" parent="UI/Life"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -50.0
offset_right = 50.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Attack" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_fkybt")
animation = &"first"
autoplay = "first"
frame = 11
frame_progress = 0.57214874

[node name="Explosion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_8erm5")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
